src/test/ui/error-codes/E0620.rs
fn main() {
    let _foo = &[1_usize, 2] as [usize]; //~ ERROR E0620
}
